--- a/app/SCSS/base/_base.scss
+++ b/app/SCSS/base/_base.scss
@@ -30,6 +30,49 @@ img {
   margin: 0 auto;
 }
 
+.title {
+  position: relative;
+  font-family: $display-font-regular;
+  font-size: 47px;
+  font-style: normal;
+  line-height: 57px;
+  text-align: center;
+}
 
+.subtitle {
+  font-family: $display-font-regular;
+  font-size: 36px;
+  font-style: normal;
+  line-height: 44px;
+  text-align: left;
+  padding: 10px 0;
 
+  @include respond-to(tablet-portrait) {
+    font-size: 32px;
+    line-height: 36px;
+  }
+}
 
+.description {
+  font-family: $font-regular;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 23px;
+  letter-spacing: 0.01em;
+  text-align: left;
+
+  @include respond-to(tablet-portrait) {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  @include respond-to(desktop) {
+    font-size: 18px;
+    line-height: 23px;
+  }
+}
+
+.underline {
+  width: 222px;
+  margin: 0 auto;
+}
